Fixing w/l image reference

--- a/obs-overlay/smash-board.html
+++ b/obs-overlay/smash-board.html
@@ -135,11 +135,7 @@
     </div>
 
     <div id="overlayRound">
-      <img
-        src="assets/overlay/scoreboard/Round BG new.png"
-        id="roundBG"
-        alt=""
-      />
+      <img src="assets/overlay/scoreboard/Round BG.png" id="roundBG" alt="" />
       <span id="round"></span>
     </div>
 
